packages/isar_plus_generator/test/errors/class/invalid_name.dart
// must not be abstract

import 'package:isar_plus/isar.dart';

@collection
abstract class Model {
  Id? id;
}
